:bug: fix color picker dark mode

--- a/website/src/components/Form/Items/Tag/styles.css
+++ b/website/src/components/Form/Items/Tag/styles.css
@@ -26,3 +26,10 @@
     @apply flex items-center mt-2;
   }
 }
+
+.fix-input-color {
+  @apply !text-base-content !bg-base-100;
+  input {
+    @apply !text-base-content !bg-base-100;
+  }
+}
